--- a/src/scss/pages/home/_home-services.scss
+++ b/src/scss/pages/home/_home-services.scss
@@ -1,22 +1,32 @@
 /*==================== HOME SERVICES ====================*/
-.services__container {
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: 140px;
-    row-gap: 50px;
+.service {
+    &__title {
+        font-size: var(--h3-font-size);
+        margin-bottom: 15px;
+    }
+    &__subtitle {
+        font-size: var(--text-style-2-font-size);
+    }
+    &__data {
+        display: flex;
+        min-width: 560px;
+    }
+    &__icon {
+        display: grid;
+        place-content: center;
+        border-radius: 50%;
+        min-width: 100px;
+        width: 100px;
+        height: 100px;
+        background-color: var(--icon-bg-color);
+        margin-bottom: 25px;
+        margin-right: 15px;
+    }
 }
-.service__icon {
-    display: grid;
-    place-content: center;
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    background-color: var(--icon-bg-color);
-    margin-bottom: 25px;
-}
-.service__title {
-    font-size: var(--h3-font-size);
-    margin-bottom: 15px;
-}
-.service__subtitle {
-    font-size: var(--text-style-4-font-size);
+.services {
+    &__container {
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 80px;
+        row-gap: 50px;
+    }
 }
