--- a/src/scss/pages/home/_home-special.scss
+++ b/src/scss/pages/home/_home-special.scss
@@ -6,16 +6,30 @@
     background: no-repeat;
     background-position: center center;
     background-size: cover;
-    height: 230px;
-    padding: 0 110px;
+    padding: 55px 110px;
     grid-template-columns: repeat(2, 1fr);
     color: var(--white-color);
     gap: 80px;
     align-items: center;
+    position: relative;
+    &::after {
+        content: "";
+        display: block;
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.4);
+    }
 }
 .special__title {
     font-size: var(--h3-font-size);
+    position: relative;
+    z-index: 1;
 }
 .special__subtitle {
-    font-size: var(--text-style-1-font-size);
+    font-size: var(--text-style-4-font-size);
+    position: relative;
+    z-index: 1;
 }
