--- a/src/scss/ui/_layout.scss
+++ b/src/scss/ui/_layout.scss
@@ -1,6 +1,7 @@
 /*==================== LAYOUT ====================*/
 .container {
-    width: 1400px;
+    width: 100%;
+    max-width: 1200px;
     margin: 0 auto;
 }
 .grid {
