--- a/src/scss/ui/_map.scss
+++ b/src/scss/ui/_map.scss
@@ -3,5 +3,5 @@
     height: 600px;
     background: no-repeat;
     background-position: center center;
-    background-size: contain;
+    background-size: cover;
 }
