--- a/src/scss/ui/_section.scss
+++ b/src/scss/ui/_section.scss
@@ -12,7 +12,7 @@
 }
 .section__header {
     grid-template-columns: repeat(2, 1fr);
-    column-gap: 120px;
+    column-gap: 90px;
     align-items: flex-start;
 }
 .section__header--brands-catalog {
@@ -26,6 +26,11 @@
 }
 .section__title + .section__button {
     margin-top: 30px;
+}
+
+.section__button {
+    font-size: 16px;
+    line-height: 22px;
 }
 
 .section__manufacturer {
@@ -46,7 +51,7 @@
     margin-top: 60px;
 }
 .section__description {
-    font-size: var(--text-style-1-font-size);
+    font-size: var(--text-style-5-font-size);
     font-family: var(--body-font);
 }
 .section__description-bottom {
