--- a/src/scss/pages/home/_home-brand.scss
+++ b/src/scss/pages/home/_home-brand.scss
@@ -1,40 +1,29 @@
 /*==================== HOME BRANDS ====================*/
-.brands__container {
-    margin-bottom: 30px;
-    grid-template-columns: repeat(6, 1fr);
-    grid-gap: 20px;
-}
-.brand__link,
-.brand__link-img-hover {
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: contain;
-}
-
-.brand__link {
-    display: block;
-    position: relative;
-    width: auto;
-    height: 130px;
-    border: 1px var(--black-color) solid;
-    overflow: hidden;
-}
-.brand__link-img-hover {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    display: block;
-    width: 100%;
-    height: 100%;
-    transition: 0.5s;
-    opacity: 0;
-    background-color: var(--black-color);
+.brands {
+    .button {
+        min-width: 182px;
+    }
+    &__container {
+        margin-bottom: 30px;
+        grid-template-columns: repeat(6, 1fr);
+        grid-gap: 20px;
+    }
 }
 
-.brand__link:hover {
-    opacity: 1;
-}
-.brand__link:hover .brand__link-img-hover {
-    opacity: 1;
+.brand {
+    &__link {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        width: auto;
+        height: 110px;
+        border: 1px var(--black-color) solid;
+        overflow: hidden;
+        transition: filter 0.3s ease;
+        background-color: #fff;
+        &:hover {
+            filter: invert(1);
+        }
+    }
 }
