--- a/src/scss/ui/_breadcrumbs.scss
+++ b/src/scss/ui/_breadcrumbs.scss
@@ -1,6 +1,7 @@
 /*==================== BREADCRUMBS ====================*/
 .breadcrumbs {
     margin-bottom: 60px;
+    margin-top: 30px;
 }
 .breadcrumbs__nav {
     display: flex;
