--- a/src/scss/pages/home/_home-products.scss
+++ b/src/scss/pages/home/_home-products.scss
@@ -6,10 +6,12 @@
 .product__content {
     position: relative;
     background-color: #fff;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.05);
+    border: 1px solid transparent;
+    box-shadow: 0px 3.29078px 12.3404px rgba(0, 0, 0, 0.1);
     padding: 15px;
     overflow: hidden;
     &:hover {
+        border: 1px solid #dedede;
         .product__img {
             transform: scale(1.2);
         }
