added company contacts and fix old pages

--- a/src/scss/pages/_pages.scss
+++ b/src/scss/pages/_pages.scss
@@ -10,3 +10,4 @@
 @import "./news-detail/news-detail";
 @import "./products/products";
 @import "./services/services";
+@import "./brands-catalog/brands-catalog";
