--- a/src/scss/pages/home/_home-products.scss
+++ b/src/scss/pages/home/_home-products.scss
@@ -10,9 +10,15 @@
     box-shadow: 0px 3.29078px 12.3404px rgba(0, 0, 0, 0.1);
     padding: 15px;
     overflow: hidden;
+    transition: border 0.3s ease;
+    .product__img,
+    .product_card__pic img {
+        transition: transform 0.3s ease;
+    }
     &:hover {
         border: 1px solid #dedede;
-        .product__img {
+        .product__img,
+        .product_card__pic img {
             transform: scale(1.2);
         }
     }
