--- a/src/scss/pages/directions/_directions.scss
+++ b/src/scss/pages/directions/_directions.scss
@@ -1,7 +1,7 @@
 /*==================== DIRECTION-PAGE ====================*/
 .direction_description__container1 {
     grid-template-columns: repeat(2, 50%);
-    margin-bottom: 50px;
+    margin-bottom: 25px;
 }
 .direction_description__image {
     background: no-repeat;
@@ -10,38 +10,79 @@
 }
 .direction_description__container1 .direction_description__image {
     height: 668px;
+    max-height: 555px;
 }
 .direction_description__container2 {
     grid-template-columns: repeat(3, 1fr);
-    gap: 100px;
+    grid-gap: 25px;
     margin-bottom: 50px;
 }
 .direction_description__container2 .direction_description__image {
-    height: 415px;
+    height: 340px;
 }
 
 .direction_description__container3 {
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr 1fr;
     gap: 60px;
     margin-bottom: 50px;
 }
 .direction_description__text1,
 .direction_description__text2 {
-    font-size: var(--text-style-1-font-size);
+    font-size: var(--text-style-18-font-size);
 }
 
 .direction_description__container4 {
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
 }
 
 .direction_description__container4 .direction_description__image {
-    height: 580px;
+    height: 480px;
 }
 
 .direction_description__container5 {
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
     margin-bottom: 50px;
+}
+.direction_description {
+    .section {
+        &__content {
+            margin-top: 25px;
+        }
+    }
+}
+
+.project-page {
+    .direction_description {
+        .section {
+            &__content {
+                margin-top: 50px;
+            }
+        }
+    }
+}
+.direction-cards {
+    max-width: 1200px;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    margin-top: -60px;
+    position: relative;
+    &__item {
+        width: 100%;
+        max-width: 280px;
+        padding: 10px 25px;
+        background: #ffffff;
+        box-shadow: 0px 3.30286px 12.3857px rgba(0, 0, 0, 0.08);
+        &-title {
+            font-weight: 600;
+            font-size: 16px;
+            line-height: 20px;
+            color: #101010;
+            margin-bottom: 15px;
+            min-height: 40px;
+        }
+    }
 }
