--- a/src/scss/pages/matching/_matching.scss
+++ b/src/scss/pages/matching/_matching.scss
@@ -18,12 +18,12 @@
     background-color: var(--white-color);
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
     padding: 15px 0;
-    z-index: var(--z-fixed);
+    z-index: 5;
     transition: 0.5s;
 }
 
 .show-matching-sticky {
-    top: 0;
+    top: 120px;
 }
 
 .show-matching-sticky .matching__product-remove-link,
@@ -43,7 +43,7 @@
     margin-top: 10px;
 }
 .matching__action_link {
-    font-size: var(--text-style-4-font-size);
+    font-size: var(--text-style-20-font-size);
 }
 
 .matching__attributes {
@@ -58,6 +58,7 @@
 
 .matching__products {
     width: 100%;
+    max-width: 950px;
 }
 
 .matching__header {
@@ -99,4 +100,24 @@
 .matching__products .matching__attributes {
     border-left: 1px var(--grey-color) solid;
     padding-left: 10px;
+}
+.matching {
+    &-slider {
+        &-wrapper {
+            position: relative;
+        }
+    }
+    &-btn {
+        top: 75px;
+        z-index: 1;
+        &-prev {
+            left: -40px;
+        }
+        &-next {
+            right: -40px;
+        }
+        &::after {
+            display: none !important;
+        }
+    }
 }
