--- a/src/scss/pages/news-detail/_news-detail.scss
+++ b/src/scss/pages/news-detail/_news-detail.scss
@@ -1,21 +1,21 @@
 /*==================== NEWS-DETAIL PAGE ====================*/
 .news_detail__date {
-    font-size: var(--text-style-4-font-size);
+    font-size: var(--text-style-20-font-size);
     margin-top: 25px;
 }
 
 .news_detail__photos {
     grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
+    grid-gap: 40px;
     align-items: flex-end;
 }
 .news_detail__photo-description {
     margin-top: 10px;
     color: var(--grey-color);
-    font-size: var(--text-style-4-font-size);
+    font-size: var(--text-style-16-font-size);
 }
 .news_detail__text {
     grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
-    font-size: var(--text-style-1-font-size);
+    grid-gap: 40px;
+    font-size: var(--text-style-18-font-size);
 }
