--- a/src/scss/pages/services/_services-additionals.scss
+++ b/src/scss/pages/services/_services-additionals.scss
@@ -1,28 +1,34 @@
 /*==================== SERVICES-PAGE ADDITIONALS ====================*/
 .additionals__container {
     grid-template-columns: repeat(3, 1fr);
-    column-gap: 20px;
+    column-gap: 25px;
     row-gap: 50px;
 }
 .additional__img_link {
     display: flex;
-    height: 100px;
-    width: 100px;
+    height: 80px;
+    width: 80px;
     justify-content: center;
     align-items: center;
     background-color: var(--icon-bg-color);
     margin-right: 20px;
     border-radius: 50%;
+    img {
+        width: 49.57px;
+        height: 51.28px;
+    }
 }
 .additional__title {
-    font-size: var(--h4-font-size);
-    margin-bottom: 20px;
+    font-size: var(--normal-font-size);
+    margin-bottom: 15px;
 }
 .additional__subtitle {
-    font-size: var(--text-style-5-font-size);
+    font-size: var(--text-style-14-font-size);
 }
-
 .additionals__description {
-    margin-top: 50px;
-    font-size: var(--text-style-1-font-size);
+    margin-top: 90px;
+    font-size: var(--text-style-18-font-size);
+    max-width: 1160px;
+    margin-left: auto;
+    margin-right: auto;
 }
