--- a/src/scss/ui/_modification-table.scss
+++ b/src/scss/ui/_modification-table.scss
@@ -18,10 +18,10 @@
 }
 
 .modifications__table td {
-    padding: 15px 32px;
+    padding: 15px 20px;
     border-top: 1px solid var(--grey-color);
     font-family: var(--header-font);
-    font-size: var(--text-style-3-font-size);
+    font-size: var(--text-style-14-font-size);
 }
 
 .modifications__table tr.active td,
@@ -47,4 +47,14 @@
     text-align: left;
     padding-left: 0;
     border-left: none;
+}
+
+.modifications__title {
+    td {
+        padding: 15px 20px 0 20px;
+    }
+}
+
+.modificaton__title-name {
+    border-bottom: 1px solid;
 }
