--- a/src/scss/pages/home/_home-products.scss
+++ b/src/scss/pages/home/_home-products.scss
@@ -6,17 +6,17 @@
 .product__content {
     position: relative;
     background-color: #fff;
-    border: 1px solid transparent;
+    outline: 1px solid transparent;
     box-shadow: 0px 3.29078px 12.3404px rgba(0, 0, 0, 0.1);
     padding: 15px;
     overflow: hidden;
-    transition: border 0.3s ease;
+    transition: outline 0.3s ease;
     .product__img,
     .product_card__pic img {
         transition: transform 0.3s ease;
     }
     &:hover {
-        border: 1px solid #dedede;
+        outline: 1px solid #dedede;
         .product__img,
         .product_card__pic img {
             transform: scale(1.2);
