--- a/src/scss/pages/brands-catalog/_brands-catalog.scss
+++ b/src/scss/pages/brands-catalog/_brands-catalog.scss
@@ -7,9 +7,22 @@
             }
             &__header {
                 grid-template-columns: 1fr 0.8fr;
+                @media screen and (max-width: 992px) {
+                    grid-template-columns: 1fr;
+                    gap: 20px;
+                }
+                
             }
             &__picture {
                 height: 400px;
+                @media screen and (max-width: 800px) {
+                    
+                }
+                @media screen and (max-width: 400px) {
+                    height: 121px;
+                    background-size: cover;
+                    width: 100%;
+                }
             }
             &__description-bottom {
                 margin-top: 30px;
