--- a/src/scss/pages/home/_home-products.scss
+++ b/src/scss/pages/home/_home-products.scss
@@ -2,6 +2,16 @@
 .products__container {
     grid-template-columns: repeat(4, 1fr);
     gap: 26px;
+
+    @media screen and (max-width: 1100px) {
+        grid-template-columns: repeat(2, 1fr);
+        grid-auto-rows: auto;
+    }
+    @media screen and (max-width: 768px) {
+        grid-template-columns: 1fr;
+        
+    }
+
 }
 .product__content {
     position: relative;
