--- a/src/scss/pages/products/_products.scss
+++ b/src/scss/pages/products/_products.scss
@@ -121,4 +121,19 @@
     background: no-repeat;
     background-size: cover;
     grid-column: 3 / 5;
+    width: 100%;    
+    @media screen and (max-width: 1100px) {
+        grid-column: 1 / 3;
+        height: 400px;
+        
+    }
+    @media screen and (max-width: 768px) {
+        grid-column: 1 / 2;
+        height: 400px;
+        
+    }
+    @media screen and (max-width: 500px) {
+        height: 300px;
+        background-position: center 50%;
+    }
 }
