--- a/src/scss/pages/contacts/_contacts.scss
+++ b/src/scss/pages/contacts/_contacts.scss
@@ -1,26 +1,112 @@
 /*==================== CONTACTS PAGE ====================*/
+.contacts__section{
+    
+    @media screen and (max-width: 768px) {
+        margin-top: 50px;
+    }
+    .contacts__content{
+        margin-top: 50px;
+        @media screen and (max-width: 768px) {
+            margin-top: 0px;
+        }
+    }
+    .contacts__info{
+        @media screen and (max-width: 768px) {
+            padding-top: 0;
+        }
+    }
+    .contacts__info-content-title{
+        @media screen and (max-width: 768px) {
+            font-weight: 600;
+        }
+    }
+    .contacts__links{
+        display: flex;
+        align-items: center;
+    }
+    .contacts__links-item{
+        margin-top: 0!important;
+        &:not(:last-child){
+            margin-right: 30px;
+        }
+    }
+    .contacts__img{
+        max-width: none;
+    }
+    .consultation_form.consultation_form--contacts{
+        @media screen and (max-width: 1200px) {
+            max-width: 600px;
+            width: 100%;
+            padding: 35px 24px 48px 20px;
+        }
+        @media screen and (max-width: 768px) {
+            margin: 0 auto;
+        }
+    }
+    .consultation_form__title{
+        @media screen and (max-width: 768px) {
+            font-weight: 700;
+            font-size: var(--h4-font-size);
+        }
+    }
+    .form__buttons.form__buttons--vertical{
+        @media screen and (max-width: 768px) {
+            .button{
+                width: 100%;
+            }
+        }
+    }
+    .form__agreement{
+        line-height: 13.37px;
+    font-size: 12px;
+        @media screen and (max-width: 768px) {
+            max-width: 256px;
+            width: 100%;
+            margin-right: 0;
+        }
+    }
+}
 .contacts__content {
     grid-template-columns: 1fr 1fr;
     column-gap: 118px;
+
+    @media screen and (max-width: 1200px) {
+        grid-template-columns: 1fr;
+        
+    }
+    @media screen and (max-width: 768px) {
+        font-size: var(--text-style-16-font-size);
+    }
 }
 
 .contacts__info {
     grid-template-columns: repeat(2, 1fr);
-    column-gap: 80px;
+    // column-gap: 60px;
     row-gap: 50px;
     padding-top: 50px;
     padding-bottom: 50px;
+    @media screen and (max-width: 768px) {
+        grid-template-columns: 1fr;
+        row-gap: 35px;
+    }
 }
 
 .contacts__info-item:nth-child(3) {
     grid-column: 1 / 3;
+    @media screen and (max-width: 768px) {
+        grid-column: 1 / 2;
+    }
 }
 .contacts__info-title {
     font-size: var(--text-style-20-font-size);
-    font-weight: var(--font-medium);
+    // font-weight: var(--font-medium);
+    font-weight: 600;
     margin-bottom: 25px;
     display: inline-block;
     border-bottom: 1px solid;
+    @media screen and (max-width: 768px) {
+        margin-bottom: 15px;
+    }
 }
 
 .contacts__info-content {
@@ -31,9 +117,9 @@
     font-size: var(--normal-font-size);
 }
 
-.contacts__links-item + .contacts__links-item {
-    margin-top: 12px;
-}
+// .contacts__links-item + .contacts__links-item {
+//     margin-top: 12px;
+// }
 
 .consultation_form--contacts {
     background-color: var(--white-color);
@@ -43,4 +129,19 @@
 
 .contacts__map {
     margin-top: 50px;
+    @media screen and (max-width: 768px) {
+        padding: 0 10px;
+    }
+    .contacts__map-img{
+        display: block;
+        @media screen and (max-width: 500px) {
+            display: none;
+        }
+    }
+    .contacts__map-im-mob{
+        display: none;
+        @media screen and (max-width: 500px) {
+            display: block;
+        }
+    }
 }
