--- a/src/scss/pages/news-detail/_news-detail.scss
+++ b/src/scss/pages/news-detail/_news-detail.scss
@@ -1,6 +1,7 @@
 /*==================== NEWS-DETAIL PAGE ====================*/
 .news_detail__date {
-    font-size: var(--text-style-20-font-size);
+    font-size: 16.57px;
+    line-height: 22.57px;
     margin-top: 25px;
 }
 
@@ -18,4 +19,167 @@
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 40px;
     font-size: var(--text-style-18-font-size);
+    @media screen and (max-width: 1024px) {
+        grid-template-columns: 1fr;
+    }
+    p{
+        font-size: var(--text-style-18-font-size);
+        line-height: 24.51px;
+        @media screen and (max-width: 1024px) {
+            font-size: var(--text-style-16-font-size);
+            line-height: 24px;
+        }
+    }
+}
+
+.news-detail{
+    
+    @media screen and (max-width: 1024px) {
+        margin-top: 50px;
+        
+    }
+
+    .section__content{
+        @media screen and (max-width: 1024px) {
+            margin-top: 25px;
+        }
+    }
+
+    .section__header{
+        @media screen and (max-width: 1024px) {
+            grid-template-columns: 1fr;
+            
+        }
+        .news_detail__date{
+            grid-area: 2/1/3/2;
+            @media screen and (max-width: 1024px) {
+                grid-area: 1/1/2/2;
+            }
+            @media screen and (max-width: 768px) {
+                font-size: 12px;
+            }
+        }
+        .section__description{
+            max-width: none;
+        }
+        p{
+            grid-area: 1/1/2/2;
+            font-size: var(--text-style-18-font-size);
+            line-height: 24.51px;
+            width: 100%;
+            @media screen and (max-width: 1024px) {
+                grid-area: 3/1/4/2;
+            }
+            
+        }
+    }
+    .section__description{
+        @media screen and (max-width: 1024px) {
+            max-width: none;
+        }
+    }
+    .section__title{
+        @media screen and (max-width: 1024px) {
+            margin-bottom: 30px;     
+            margin-top: 15px; 
+            font-size: 30px;
+            line-height: 38px;      
+        }
+    }
+
+    .new-detail__wrapper{
+        display: grid;
+        grid-template-columns: repeat(2, 560px);
+        column-gap: 40px;
+        @media screen and (max-width: 1180px) {
+            grid-template-columns: 1fr;
+        }
+    }
+    .news_detail__photo-description{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .news_detail__photo-description-one{
+        grid-area: 1/1/2/2;
+        display: flex;
+        justify-content: center;
+    }
+    .news_detail__photo-description-two{
+        display: flex;
+        align-items: flex-end;
+        @media screen and (max-width: 1180px) {
+            grid-area: 4/1/5/2;
+            justify-self: center;
+        }
+    }
+    .news_detail__inscription-box{
+        grid-area: 2/1/3/2;
+        margin-top: 10px;
+
+    }
+    .news_detail__inscription{
+        color: var(--grey-color);
+        font-size: var(--text-style-16-font-size);
+    }
+    .news_detail__text-one{
+        grid-area: 3/1/4/2;
+        margin-top: 50px;
+        line-height: 25.51px;
+        font-weight: 400;
+        max-width: 508px;
+        width: 100%;
+        @media screen and (max-width: 1180px) {
+            grid-area: 3/1/4/2;
+            max-width: none;
+            margin: 25px 0;
+        }
+    }
+    .news_detail__text-two{
+        line-height: 25.51px;
+        max-width: 514px;
+        width: 100%;
+        @media screen and (max-width: 1180px) {
+            
+            max-width: none;
+        }
+    }
+    .button.button--red{
+        margin-top: 25px;
+        padding: 9.21px 38.07px;
+        font-size: 16.57px;
+        border: none;
+        max-width: 149px;
+        width: 100%;
+        min-height: 0;
+        min-width: 0;
+        @media screen and (max-width: 1180px) {
+            max-width: none;
+        }
+    }
+    .news_detail__text-two-box{
+        grid-area: 3/2/4/3;
+        margin-top: 50px;
+        @media screen and (max-width: 1180px) {
+            grid-area: 5/1/6/2;
+            margin-top: 25px;
+        }
+        
+    }
+    .news-detail__images-bottom{
+        display: flex;
+        justify-content: center;
+    }
+    .news-detail__photo-desktop{
+        display: block;
+        @media screen and (max-width: 768px) {
+            display: none;
+        }
+    }
+    .news-detail__photo-mob{
+        display: none;
+        @media screen and (max-width: 768px) {
+            display: block;
+        }
+    }
 }
