--- a/src/scss/pages/company/_company.scss
+++ b/src/scss/pages/company/_company.scss
@@ -4,6 +4,16 @@
     column-gap: 90px;
     row-gap: 50px;
     font-size: 18px;
+
+    @media screen and (max-width: 1024px) {
+        grid-template-columns: 1fr;
+        row-gap: 40px;
+    }
+    .section__header{
+        @media screen and (max-width: 1024px) {
+            grid-template-columns: 1fr;
+        }
+    }
 }
 .company__content p + p {
     margin-top: 20px;
@@ -17,5 +27,69 @@
     }
     .section__content {
         margin-top: 25px;
+    }
+}
+main.project-page.company{
+    .section__content{
+        margin-top: 40px;
+    }
+    .section__header{
+        @media screen and (max-width: 1024px) {
+            grid-template-columns: 1fr;
+        }
+    }
+    .section__title{
+        @media screen and (max-width: 1024px) {
+            margin-bottom: 30px;
+        }
+    }
+    .section__description{
+        @media screen and (max-width: 1024px) {
+            max-width: none;
+        }
+    }
+    p{
+        font-size: var(--text-style-18-font-size);
+        @media screen and (max-width: 1024px) {
+            font-size: var(--text-style-16-font-size);
+        }
+    }
+    .company__textes{
+        @media screen and (max-width: 1024px) {
+            grid-area: 2/1/3/2;
+        }
+    }
+    .company__img-box{
+        display: flex;
+        justify-content: center;
+    }
+    .company__img-box-two{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+}
+
+.company-body{
+    // header{
+    //     display: none;
+    // }
+    .header__banner-title{
+        @media screen and (max-width: 1230px) {
+            padding-left: 20px;
+        }
+        @media screen and (max-width: 768px) {
+            font-size: 30px;
+            line-height: 38px;
+            padding-left: 9px;
+        }
+    }
+    .header__banner-content{
+        background-image: url(../images/company__page/header__bg-company.png);
+        background-repeat: no-repeat;
+        @media screen and (max-width: 480px) {
+            background-image: url(../images/company__page/header-bg-mob.jpeg);
+        }
     }
 }
