--- a/src/scss/pages/directions/_directions.scss
+++ b/src/scss/pages/directions/_directions.scss
@@ -2,23 +2,36 @@
 .direction_description__container1 {
     grid-template-columns: repeat(2, 50%);
     margin-bottom: 25px;
+
+    @media screen and (max-width: 1200px) {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
+
 .direction_description__image {
     background: no-repeat;
     background-position: center center;
     background-size: cover;
 }
+
 .direction_description__container1 .direction_description__image {
-    height: 668px;
-    max-height: 555px;
+    // height: 668px;
+    // max-height: 555px;
 }
+
 .direction_description__container2 {
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 25px;
     margin-bottom: 50px;
+
+    @media screen and (max-width: 768px) {
+        grid-template-columns: 1fr;
+        margin-bottom: 30px;
+    }
 }
+
 .direction_description__container2 .direction_description__image {
-    height: 340px;
+    // height: 340px;
 }
 
 .direction_description__container3 {
@@ -26,19 +39,27 @@
     gap: 60px;
     margin-bottom: 50px;
 }
+
 .direction_description__text1,
 .direction_description__text2 {
     font-size: var(--text-style-18-font-size);
+    @media screen and (max-width: 768px) {
+        font-size: var(--text-style-16-font-size);
+    }
 }
 
 .direction_description__container4 {
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
     margin-bottom: 50px;
+
+    @media screen and (max-width: 768px) {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
 
 .direction_description__container4 .direction_description__image {
-    height: 480px;
+    // height: 480px;
 }
 
 .direction_description__container5 {
@@ -46,6 +67,7 @@
     gap: 20px;
     margin-bottom: 50px;
 }
+
 .direction_description {
     .section {
         &__content {
@@ -63,6 +85,7 @@
         }
     }
 }
+
 .direction-cards {
     max-width: 1200px;
     margin: auto;
@@ -70,12 +93,14 @@
     justify-content: space-between;
     margin-top: -60px;
     position: relative;
+
     &__item {
         width: 100%;
         max-width: 280px;
         padding: 10px 25px;
         background: #ffffff;
         box-shadow: 0px 3.30286px 12.3857px rgba(0, 0, 0, 0.08);
+
         &-title {
             font-weight: 600;
             font-size: 16px;
@@ -83,6 +108,77 @@
             color: #101010;
             margin-bottom: 15px;
             min-height: 40px;
+        }
+    }
+}
+
+.projects {
+    .section__description{
+        max-width: 500px;
+        width: 100%;
+        line-height: 24.51px;
+    }
+    .section.direction_description{
+        @media screen and (max-width: 768px) {
+            margin-top: 100px;
+        }
+    }
+    .section__content {
+        @media screen and (max-width: 1200px) {
+            display: grid;
+        }
+        @media screen and (max-width: 768px) {
+            margin-bottom: 40px;
+        }
+    }
+    .direction_description__container5.grid.one{
+        @media screen and (max-width: 1200px) {
+            grid-area: 2/1/3/2;
+            grid-template-columns: 1fr;
+        }
+        @media screen and (max-width: 768px) {
+            margin-bottom: 40px;
+        }
+    }
+    .direction_description__container5.grid{
+        @media screen and (max-width: 1200px) {
+            grid-template-columns: 1fr;
+        }
+    }
+}
+
+.projects-body{
+    
+    .header__banner-title{
+        @media screen and (max-width: 1230px) {
+            padding-left: 20px;
+        }
+        @media screen and (max-width: 768px) {
+            font-size: 30px;
+            line-height: 38px;
+            padding-left: 9px;
+        }
+    }
+    .header__banner-content{
+        background-image: url(../images/projects__page/back.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        @media screen and (max-width: 768px) {
+            max-height: 400px!important;
+            background-image: url(../images/projects__page/mobile-bg.jpeg);
+        }
+    }
+    .header__banner.company--banner{
+        @media screen and (max-width: 768px) {
+            background-size: contain;
+        }
+        @media screen and (max-width: 768px) {
+            max-height: 400px!important;
+        }
+    }
+    .header__banner-wrapper{
+        @media screen and (max-width: 768px) {
+            max-height: 400px!important;
         }
     }
 }
