--- a/src/scss/ui/_header.scss
+++ b/src/scss/ui/_header.scss
@@ -513,16 +513,20 @@
 
 
 .burger-menu {
-    transform: translateX(-100%);
-    transition: all .5s ease;
+    display: none;
+    z-index: -9999;
     position: fixed;
     top: 0;
-    left: 0;
+    left: -100%;
     height: 100%;
     width: 100%;
     background: #4A586E;
     padding-top: 15px;
     padding-bottom: 20px;
+    transition: all .5s ease 0s;
+    @media screen and (max-width: 1110px) {
+        display: block;
+    }
 
     .container{
         padding-left: 20px;
@@ -572,8 +576,9 @@
     }
 }
 .burger-menu.active{
-    transform: translateX(0);
-    transition: all .5s ease;
+    left: 0%;
+    transition: all .5s ease 0s;
+    z-index: 9999;
 }
 body.active{
     overflow: hidden;
